# Backtestester

./: README.md  pyproject.toml  requirements.txt
TopStepB - MAIN CLEAN - BEFORE SECOND STRATEGY/: OPTUNA_PERFORMANCE_ANALYSIS.md  README.md  main_runner.py
TopStepB - MAIN CLEAN - BEFORE SECOND STRATEGY/analytics/: __init__.py
TopStepB - MAIN CLEAN - BEFORE SECOND STRATEGY/app/: __init__.py  pipeline.py
TopStepB - MAIN CLEAN - BEFORE SECOND STRATEGY/config/: system_config.py
TopStepB - MAIN CLEAN - BEFORE SECOND STRATEGY/data/: __init__.py  data_loader.py  data_splitter.py  data_structures.py  data_validator.py
TopStepB - MAIN CLEAN - BEFORE SECOND STRATEGY/deployed_strategies/: optimized_rank_001_score_0.5607_bollinger_squeeze.py
TopStepB - MAIN CLEAN - BEFORE SECOND STRATEGY/deployment/: __init__.py  deployment_config.py  deployment_engine.py  parameter_injector.py  template_validator.py
TopStepB - MAIN CLEAN - BEFORE SECOND STRATEGY/optimization/: engine.py  objective.py  parallel.py  scorers.py
TopStepB - MAIN CLEAN - BEFORE SECOND STRATEGY/packager/: __init__.py
TopStepB - MAIN CLEAN - BEFORE SECOND STRATEGY/strategies/: __init__.py
TopStepB - MAIN CLEAN - BEFORE SECOND STRATEGY/utils/: __init__.py  exceptions.py  logger.py  price_seed_resolver.py  (+1 more)
tests/: conftest.py  test_error_handling.py  test_objective_factory.py  test_optuna_engine_flow.py  test_optuna_engine_validation.py  test_price_seed_resolver.py  test_timezone_utils.py  test_validation_analytics_packaging.py  test_validation_engine.py
topstepb/: README.md  main_runner.py
(+33 files in other folders)
