[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backtestester"
version = "0.1.0"
description = "Institutional CME futures trading system"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy",
    "optuna",
    "psycopg2-binary",
    "scikit-learn",
    "scipy",
]
